plf/src/snapshot_tests/snapshots/plf__snapshot_tests__lexer__lexer_errors@invalid_string.txt.snap
---
source: plf/src/snapshot_tests/lexer.rs
expression: res.unwrap_err()
input_file: plf/src/snapshot_tests/lexer_inputs/errors/invalid_string.txt
---
Error {
    kind: SyntaxError(
        ReportError {
            message: "String opened with `\"` is missing its closing `\"`",
            filename: "",
            source: "",
            span:  @ 1:3-1:3 (3..3),
            notes: [],
        },
    ),
    source: None,
}
