plf/src/snapshot_tests/snapshots/plf__snapshot_tests__lexer__lexer_errors@unclosed_comment.txt.snap
---
source: plf/src/snapshot_tests/lexer.rs
expression: res.unwrap_err()
input_file: plf/src/snapshot_tests/lexer_inputs/errors/unclosed_comment.txt
---
Error {
    kind: SyntaxError(
        ReportError {
            message: "Closing comment tag `#}` not found",
            filename: "",
            source: "",
            span:  @ 1:0-1:2 (0..2),
            notes: [],
        },
    ),
    source: None,
}
