plf/src/snapshot_tests/snapshots/plf__snapshot_tests__lexer__lexer_ok@basic.txt.snap
---
source: plf/src/snapshot_tests/lexer.rs
expression: "&tokens"
input_file: plf/src/snapshot_tests/lexer_inputs/success/basic.txt
---
[
    CONTENT("Hello "),
    VARIABLE_START(false),
    IDENT(username),
    VARIABLE_END(false),
    CONTENT(", {welcome}."),
]
