plf/src/snapshot_tests/snapshots/plf__snapshot_tests__lexer__lexer_ok@empty_comment.txt.snap
---
source: plf/src/snapshot_tests/lexer.rs
expression: "&tokens"
input_file: plf/src/snapshot_tests/lexer_inputs/success/empty_comment.txt
---
[
    CONTENT(""),
]
