plf/src/snapshot_tests/snapshots/plf__snapshot_tests__lexer__lexer_ok@raw.txt.snap
---
source: plf/src/snapshot_tests/lexer.rs
expression: "&tokens"
input_file: plf/src/snapshot_tests/lexer_inputs/success/raw.txt
---
[
    CONTENT("Hello"),
    CONTENT("Some ignored {{ content }}  {% if true %} hello {%"),
    CONTENT("World\n\nInline as well "),
    CONTENT(" {{ hey }} "),
    CONTENT("\n"),
]
