plf/src/snapshot_tests/snapshots/plf__snapshot_tests__lexer__lexer_ok@raw2.txt.snap
---
source: plf/src/snapshot_tests/lexer.rs
expression: "&tokens"
input_file: plf/src/snapshot_tests/lexer_inputs/success/raw2.txt
---
[
    CONTENT("    yaml_test:     "),
]
