plf/src/snapshot_tests/snapshots/plf__snapshot_tests__lexer__lexer_ok@string_escapes.txt.snap
---
source: plf/src/snapshot_tests/lexer.rs
expression: "&tokens"
input_file: plf/src/snapshot_tests/lexer_inputs/success/string_escapes.txt
---
[
    VARIABLE_START(false),
    STRING("\\"),
    VARIABLE_END(false),
    CONTENT(" "),
    VARIABLE_START(false),
    STRING("C:\\path"),
    VARIABLE_END(false),
    CONTENT(" "),
    VARIABLE_START(false),
    STRING("a\\b"),
    VARIABLE_END(false),
    CONTENT(" "),
    VARIABLE_START(false),
    STRING("a\"b"),
    VARIABLE_END(false),
    CONTENT("\n"),
]
